<resources>
    <string name="app_name">Knowlexchange</string>
    <string name="start_caption">Let\'s start</string>
    <string name="chat_button_caption">Chat with yourself</string>
    <string name="exit">Exit</string>
    <string name="user_nick_placeholder">Your new friend</string>
    <string name="user_wanted_skills">USER WANTS TO</string>
    <string name="user_owned_skills">USER SKILLS</string>
    <string name="write_a_message">Write a message</string>
    <string name="chats">Chats</string>
    <string name="chat_display">%1$s - %2$s</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
</resources>